increased image size for better readabilty fixed spelling and grammar errors

--- a/documentation.ipynb
+++ b/documentation.ipynb
@@ -46,9 +46,9 @@
    "source": [
     "# 1. Introduction - Task Understanding\n",
     "\n",
-    "The main goal of this project is to create a flash card tool specifically designed to assist in the acquisition of knowledge on different subjects. The application provides users with a range of features, such as the creation, storage, and management of learning cards. Furthermore, it seeks to enhance comprehension of the educational material through gamification, as the application also has a scoring system to monitor user progress.\n",
+    "The main goal of this project is to create a flash card tool specifically designed to assist in the acquisition of knowledge on different subjects. The application provides users with a range of features, such as the creation, storage, and management of learning cards. Furthermore, it seeks to enhance comprehension of educational material through gamification, as the application also has a scoring system to monitor user progress.\n",
     "\n",
-    "The project setup is organised into modules. The objective of this specific notebook is to chronicle our strategy, key components of the code, and the decisions we made to complete the project.  \n",
+    "The project setup is organized into modules. The objective of this specific notebook is to chronicle our strategy, key components of the code, and the decisions we made to complete the project.  \n",
     "\n"
    ]
   },
@@ -56,9 +56,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1.1. Thinking Process\n",
+    "## 1.1. Thought Process\n",
     "\n",
-    "We started out by visualsing and thinking through the functionality of the application. While this process helped us align our expectations and work out a comprehensive requirements list, we quickly realised that in order to make progresd, we need to start prototyping at a very early stage.\n",
+    "We started out by visualizing and thinking through the functionality of the application. While this process helped us align our expectations and work out a comprehensive requirements list, we quickly realized that in order to make progress, we need to start prototyping at a very early stage.\n",
     "\n",
     "### 1.1.1. General assumptions and specifications\n",
     "* Keep it simple and the scope small to make sure we get the project done.\n",
@@ -100,7 +100,7 @@
     "```python\n",
     "import customtkinter as ctk\n",
     "```\n",
-    "This imports the customtkinter library and assigns it the alias ctk. customtkinter is a custom version of the standard tkinter library that provides additional widgets and styles for creating modern and aesthetically pleasing GUIs. Using the alias ctk allows to refer refer to the library’s components in a more concise way within the code.\n",
+    "This imports the customtkinter library and assigns it the alias ctk. customtkinter is a custom version of the standard tkinter library that provides additional widgets and styles for creating modern and aesthetically pleasing GUIs. Using the alias ctk allows to refer to the library’s components in a more concise way within the code.\n",
     "\n",
     "```python\n",
     "import tkinter as tk\n",
@@ -147,7 +147,7 @@
     "#### **Flashcard Class // flashcard.py**\n",
     "\n",
     "**Description**: Represents a single flashcard with a front (question) and back (answer).\n",
-    "Aditionally the Number of times the card has been reviewed and answered correctly is counted in order to create statistics.\n",
+    "Additionally the Number of times the card has been reviewed and answered correctly is counted in order to create statistics.\n",
     "\n",
     "**Attributes**:\n",
     "- `front` (str): The front text of the flashcard.\n",
@@ -182,7 +182,7 @@
     "\n",
     "#### **FileOperations Class // file_operations.py**\n",
     "**Description**:\n",
-    "- Handles importing and exporting of flashcard sets.\n",
+    "- Handles importing and exporting flashcard sets.\n",
     "- Deck data is saved in JSON format\n",
     "- Each deck is saved as a separate JSON file in the application directory\n",
     "- Import/export functions use JSON for data interchange\n",
@@ -377,7 +377,7 @@
     "- Access Help\n",
     "- Exit Application\n",
     "\n",
-    "<img src=\"images/00_main.png\" width=\"200\" height=\"\">\n",
+    "<img src=\"images/00_main.png\" width=\"300\" height=\"\">\n",
     "\n",
     "### 5.2. Deck Creation and Editing\n",
     "\n",
@@ -388,7 +388,7 @@
     "| **Delete deck:** | 1. Click \"Delete\" on the \"your decks\" menu<br>2. Confirm Deletion.                                                      |\n",
     "\n",
     "<br>\n",
-    "<img src=\"images/01_new_deck.png\" width=\"200\" height=\"\">\n",
+    "<img src=\"images/01_new_deck.png\" width=\"300\" height=\"\">\n",
     "<br>\n",
     "\n",
     "### 5.3. Card Creation and Editing\n",
@@ -399,7 +399,7 @@
     "| **Edit card:** | 1. In the deck editing view, select the card to edit<br>2. Modify the question or answer as needed<br>3. Save changes |\n",
     "\n",
     "<br>\n",
-    "<img src=\"images/02_add_card.png\" width=\"200\" height=\"\">\n",
+    "<img src=\"images/02_add_card.png\" width=\"300\" height=\"\">\n",
     "<br>\n",
     "\n",
     "### 5.4. Study Session Interface\n",
@@ -413,7 +413,7 @@
     "- Navigation buttons (Previous, Next, End Session)\n",
     "\n",
     "<br>\n",
-    "<img src=\"images/03_study.png\" width=\"200\" height=\"\">\n",
+    "<img src=\"images/03_study.png\" width=\"300\" height=\"\">\n",
     "<br>\n",
     "\n",
     "### 5.5. Statistics View\n",
@@ -426,7 +426,7 @@
     "\n",
     "\n",
     "<br>\n",
-    "<img src=\"images/04_statistics.png\" width=\"200\" height=\"\">\n",
+    "<img src=\"images/04_statistics.png\" width=\"300\" height=\"\">\n",
     "<br>\n",
     "\n",
     "### 5.6. Deck Manager View\n",
@@ -438,7 +438,7 @@
     "- Edit Card\n",
     "\n",
     "<br>\n",
-    "<img src=\"images/05_editing.png\" width=\"200\" height=\"\">\n",
+    "<img src=\"images/05_editing.png\" width=\"300\" height=\"\">\n",
     "<br>\n",
     "\n",
     "### 5.7. Help\n",
